--- a/app/templates/blog/index.html
+++ b/app/templates/blog/index.html
@@ -3,7 +3,7 @@
 
 {% block app_content %}
 
-    <h1>Hi, {{ current_user.username }}!</h1>
+    <h1>Hi, {% if current_user.is_authenticated %}{{ current_user.username }}{% else %}welcome{% endif %}!</h1>
     {% for post in posts %}
     {% include '_post.html' %}
     {% endfor %}
