--- a/app/templates/blog/post.html
+++ b/app/templates/blog/post.html
@@ -53,7 +53,7 @@
     <tr valign="top">
         <td><span class="btn btn-info">内容</span></td>
         <td width="10"></td>
-        <td>{{ post.body }}</td>
+        <td>{{ post.body | safe }}</td>
     </tr>
 </table>
 
