--- a/app/templates/blog/post.html
+++ b/app/templates/blog/post.html
@@ -19,7 +19,7 @@
             
             <p style="font-weight: normal;">
                 {{ '{} 粉丝'.format(user.fans.count()) }},
-                {{ '{} 关注'.format(user.stars.count()) }}
+                {{ '{} 关注'.format(user.likes.count()) }}
             </p>
          
 
