--- a/app/templates/blog/user.html
+++ b/app/templates/blog/user.html
@@ -18,7 +18,7 @@
                 
                 <p style="font-weight: normal;">
                     {{ '{} 粉丝'.format(user.fans.count()) }},
-                    {{ '{} 关注'.format(user.stars.count()) }}
+                    {{ '{} 关注'.format(user.likes.count()) }}
                 </p>
 
                 {% if user == current_user %}
