--- a/app/templates/blog/user_popup.html
+++ b/app/templates/blog/user_popup.html
@@ -18,7 +18,7 @@
                 {% endif %}
 
                 <p style="font-weight: normal;">{{ '{} 粉丝'.format(user.fans.count()) }},
-                {{ '{} 关注'.format(user.stars.count()) }}</p>
+                {{ '{} 关注'.format(user.likes.count()) }}</p>
                 
                 {% if user != current_user %}
                     {% if not current_user.is_following(user) %}
